# nepalify

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nepalify/: __init__.py
nepalify/dates/: __init__.py  bs_date.py  bs_datetime.py  calendar.py  converter.py  format_codes.py  parser.py  timezone.py
nepalify/dates/data/: bs_calendar.json
nepalify/numbers/: __init__.py  devanagari.py  formatting.py  ordinals.py
nepalify/text/: __init__.py  constants.py  localization.py
tests/: test_calendar.py  test_dates.py  test_datetime.py  test_numbers.py  test_ordinals.py  test_parser.py  test_parser_formats.py  test_sanskrit.py  test_text.py
